@@ -1497,6 +1497,7 @@ cl_symbols[] = {
 #ifdef ECL_THREADS
 {MP_ "PROCESS", MP_ORDINARY, NULL, -1, OBJNULL},
 {MP_ "LOCK", MP_ORDINARY, NULL, -1, OBJNULL},
+{MP_ "CONDITION-VARIABLE", MP_ORDINARY, NULL, -1, OBJNULL},
 {MP_ "*CURRENT-PROCESS*", MP_SPECIAL, NULL, -1, OBJNULL},
 {MP_ "ALL-PROCESSES", MP_ORDINARY, mp_all_processes, 0, OBJNULL},
 {MP_ "EXIT-PROCESS", MP_ORDINARY, mp_exit_process, 0, OBJNULL},
@@ -1509,8 +1510,17 @@ cl_symbols[] = {
 {MP_ "PROCESS-RUN-FUNCTION", MP_ORDINARY, mp_process_run_function, -1, OBJNULL},
 {MP_ "PROCESS-WHOSTATE", MP_ORDINARY, mp_process_whostate, 1, OBJNULL},
 {MP_ "MAKE-LOCK", MP_ORDINARY, mp_make_lock, -1, OBJNULL},
+{KEY_ "RECURSIVE", KEYWORD, NULL, -1, OBJNULL},
+{MP_ "RECURSIVE-LOCK-P", MP_ORDINARY, mp_recursive_lock_p, 1, OBJNULL},
+{MP_ "LOCK-NAME", MP_ORDINARY, mp_lock_name, 1, OBJNULL},
+{MP_ "LOCK-HOLDER", MP_ORDINARY, mp_lock_holder, 1, OBJNULL},
 {MP_ "GET-LOCK", MP_ORDINARY, mp_get_lock, -1, OBJNULL},
 {MP_ "GIVEUP-LOCK", MP_ORDINARY, mp_giveup_lock, 1, OBJNULL},
+{MP_ "MAKE-CONDITION-VARIABLE", MP_ORDINARY, mp_make_condition_variable, 0, OBJNULL},
+{MP_ "CONDITION-VARIABLE-WAIT", MP_ORDINARY, mp_condition_variable_wait, 2, OBJNULL},
+{MP_ "CONDITION-VARIABLE-TIMEDWAIT", MP_ORDINARY, mp_condition_variable_timedwait, 3, OBJNULL},
+{MP_ "CONDITION-VARIABLE-SIGNAL", MP_ORDINARY, mp_condition_variable_signal, 1, OBJNULL},
+{MP_ "CONDITION-VARIABLE-BROADCAST", MP_ORDINARY, mp_condition_variable_broadcast, 1, OBJNULL},
 {KEY_ "INITIAL-BINDINGS", KEYWORD, NULL, -1, OBJNULL},
 {MP_ "INTERRUPT-PROCESS", MP_ORDINARY, mp_interrupt_process, 2, OBJNULL},
 {MP_ "+LOAD-COMPILE-LOCK+", MP_CONSTANT, NULL, -1, OBJNULL},
