@@ -1497,6 +1497,7 @@ cl_symbols[] = {
 #ifdef ECL_THREADS
 {MP_ "PROCESS",NULL},
 {MP_ "LOCK",NULL},
+{MP_ "CONDITION-VARIABLE",NULL},
 {MP_ "*CURRENT-PROCESS*",NULL},
 {MP_ "ALL-PROCESSES","mp_all_processes"},
 {MP_ "EXIT-PROCESS","mp_exit_process"},
@@ -1509,8 +1510,17 @@ cl_symbols[] = {
 {MP_ "PROCESS-RUN-FUNCTION","mp_process_run_function"},
 {MP_ "PROCESS-WHOSTATE","mp_process_whostate"},
 {MP_ "MAKE-LOCK","mp_make_lock"},
+{KEY_ "RECURSIVE",NULL},
+{MP_ "RECURSIVE-LOCK-P","mp_recursive_lock_p"},
+{MP_ "LOCK-NAME","mp_lock_name"},
+{MP_ "LOCK-HOLDER","mp_lock_holder"},
 {MP_ "GET-LOCK","mp_get_lock"},
 {MP_ "GIVEUP-LOCK","mp_giveup_lock"},
+{MP_ "MAKE-CONDITION-VARIABLE","mp_make_condition_variable"},
+{MP_ "CONDITION-VARIABLE-WAIT","mp_condition_variable_wait"},
+{MP_ "CONDITION-VARIABLE-TIMEDWAIT","mp_condition_variable_timedwait"},
+{MP_ "CONDITION-VARIABLE-SIGNAL","mp_condition_variable_signal"},
+{MP_ "CONDITION-VARIABLE-BROADCAST","mp_condition_variable_broadcast"},
 {KEY_ "INITIAL-BINDINGS",NULL},
 {MP_ "INTERRUPT-PROCESS","mp_interrupt_process"},
 {MP_ "+LOAD-COMPILE-LOCK+",NULL},
